--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,4 @@
 [pytest]
-
 markers =
     smoke : smoke pytest
     stress : stress test
@@ -8,6 +7,13 @@ markers =
     sanity : sanity test
     para: parameterization
 
-render_collapsed = True
+render_collapsed = All
 
-addopts = -vs --html=report.html --self-contained-html
+addopts = -rAvs --html=report.html --self-contained-html
+
+log_cli=true
+
+log_level = INFO
+log_format = %(asctime)s  %(levelname)s  %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
+
